--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="notification-status">
   </div>
   <div class="container">
-    <video id="player" preload="metadata" onclick="togglePanel()">
+    <video id="player" preload="metadata">
     </video>
 
     <div id="control-panel-desk" class="desktop">
